--- a/lib/profiling/lfric_timer/Makefile
+++ b/lib/profiling/lfric_timer/Makefile
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # BSD 3-Clause License
 #
-# Copyright (c) 2020-2021, Science and Technology Facilities Council.
+# Copyright (c) 2020-2022, Science and Technology Facilities Council.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -51,14 +51,15 @@ INF_INC = $(LFRIC_INF_DIR)
 INF_LIB_NAME = lfric
 INF_LIB = $(LFRIC_INF_DIR)/lib$(INF_LIB_NAME).a
 
-F90FLAGS += -I$(INF_INC)
+F90FLAGS += -I$(INF_INC)/utilities
 PSYDATA_LIB_NAME = psy_lfric_timer
 PSYDATA_LIB = lib$(PSYDATA_LIB_NAME).a
 PSYDATA_STANDALONE_LIB_NAME = psy_lfric_timer_standalone
 PSYDATA_STANDALONE_LIB = lib$(PSYDATA_STANDALONE_LIB_NAME).a
 
 PSY_OBJS = profile_psy_data_mod.o
-INF_OBJS = timer_mod.o log_mod.o scalar_mod.o mpi_mod.o io_utility_mod.o
+INF_OBJS = utilities/timer_mod.o utilities/log_mod.o scalar/scalar_mod.o \
+	       utilities/mpi_mod.o io/io_utility_mod.o
 INF_OBJS_FULL_PATH = $(patsubst %,$(LFRIC_INF_DIR)/%,$(INF_OBJS))
 
 .phony: default clean allclean
