--- a/examples/nemo/eg4/Makefile
+++ b/examples/nemo/eg4/Makefile
@@ -45,13 +45,17 @@ transform: ${FORTRAN_FILES} intrinsic tra_adv
 ${FORTRAN_FILES}:
 	${PSYCLONE} -s ./sir_trans.py -api nemo $@ -opsy /dev/null
 
-# intrinsic_example.f90 and tracer_advection.f90 make use of
+# intrinsic_example.f90 and tracer_advection.f90 can make use of
 # different transformation scripts
 intrinsic:
+	${PSYCLONE} -s ./sir_trans.py -api nemo intrinsic_example.f90 \
+-opsy /dev/null
 	${PSYCLONE} -s ./sir_trans_all.py -api nemo intrinsic_example.f90 \
 -opsy /dev/null
 tra_adv:
 	${PSYCLONE} -s ./sir_trans_loop.py -api nemo tra_adv_compute.F90 \
+-opsy /dev/null
+	${PSYCLONE} -s ./sir_trans_all.py -api nemo tra_adv_compute.F90 \
 -opsy /dev/null
 
 # We don't do any compilation for this example
