--- a/tutorial/practicals/LFRic/building_code/4_psydata/.gitignore
+++ b/tutorial/practicals/LFRic/building_code/4_psydata/.gitignore
@@ -5,3 +5,7 @@
 *.txt
 time_evolution
 main-update.nc
+time_evolution-propagate.nc
+time_evolution-invoke_initialise_perturbation.nc
+time_evolution-invoke_propagate_perturbation.nc
+
