--- a/examples/lfric/eg17/full_example/Makefile
+++ b/examples/lfric/eg17/full_example/Makefile
@@ -53,9 +53,8 @@ EXEC = example
 LFRIC_PATH = ../../../../src/psyclone/tests/test_files/dynamo0p3/infrastructure
 LFRIC_NAME=lfric
 LFRIC_LIB=$(LFRIC_PATH)/lib$(LFRIC_NAME).a
-
-F90FLAGS += -I$(LFRIC_PATH)/field -I$(LFRIC_PATH)/function_space \
-	-I$(LFRIC_PATH)/utilities -I$(LFRIC_PATH)/mesh
+LFRIC_INCLUDE_FLAGS:=$(shell $(MAKE) -s -C $(LFRIC_PATH) get_include_flags)
+F90FLAGS += $(LFRIC_INCLUDE_FLAGS)
 
 run: compile
 	./example
