--- a/tutorial/practicals/LFRic/building_code/3_time_evolution/solutions/Makefile
+++ b/tutorial/practicals/LFRic/building_code/3_time_evolution/solutions/Makefile
@@ -60,8 +60,9 @@ PSYCLONE_RELPATH = ../../../../../..
 LFRIC_PATH = $(PSYCLONE_RELPATH)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
 LFRIC_NAME = lfric_netcdf
 LFRIC_LIB = $(LFRIC_PATH)/lib$(LFRIC_NAME).a
-LFRIC_INCLUDE_FLAGS:=$(shell $(MAKE) -s -C $(LFRIC_PATH) get_include_flags)
-F90FLAGS += $(LFRIC_INCLUDE_FLAGS)
+
+# This will add the required include flags to F90FLAGS
+include $(LFRIC_PATH)/lfric_include_flags.inc
 
 # GungHo auxiliary libraries
 GHLIB_PATH = ../../gungho_lib
