#1735 Fixed failing tests due to wrong variable used for lfric path.

--- a/examples/lfric/eg17/full_example_extract/Makefile
+++ b/examples/lfric/eg17/full_example_extract/Makefile
@@ -54,9 +54,9 @@ EXEC = extract
 EXTRACT_DIR ?= $(PSYROOT)/lib/extract/netcdf/lfric
 EXTRACT_NAME =_kernel_data_netcdf
 EXTRACT_LIB = $(EXTRACT_DIR)/lib$(EXTRACT_NAME).a
-LFRIC_DIR ?= $(PSYROOT)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
+LFRIC_PATH ?= $(PSYROOT)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
 LFRIC_NAME=lfric
-LFRIC_LIB=$(LFRIC_DIR)/lib$(LFRIC_NAME).a
+LFRIC_LIB=$(LFRIC_PATH)/lib$(LFRIC_NAME).a
 
 # This will add the required include flags to F90FLAGS
 include $(LFRIC_PATH)/lfric_include_flags.inc
@@ -70,10 +70,10 @@ run: compile
 
 $(EXEC): $(LFRIC_LIB) $(EXTRACT_LIB) $(OBJ)
 	$(F90) $(F90FLAGS) $(OBJ) -o $(EXEC) -L$(EXTRACT_DIR) -l$(EXTRACT_NAME) \
-	      -L$(LFRIC_DIR) -l$(LFRIC_NAME) $$(nf-config --flibs)
+	      -L$(LFRIC_PATH) -l$(LFRIC_NAME) $$(nf-config --flibs)
 
 $(LFRIC_LIB):
-	$(MAKE) -C $(LFRIC_DIR)
+	$(MAKE) -C $(LFRIC_PATH)
 
 $(EXTRACT_LIB): $(LFRIC_LIB)
 	$(MAKE) -C $(EXTRACT_DIR)
@@ -98,5 +98,5 @@ main_alg.f90: main_psy.f90
 	-nodm -opsy $*_psy.f90 -oalg $*_alg.f90 $<
 
 allclean: clean
-	$(MAKE) -C $(LFRIC_DIR) allclean
+	$(MAKE) -C $(LFRIC_PATH) allclean
 	$(MAKE) -C $(EXTRACT_DIR) allclean
