#1735 Fixed failing test due to missing include.

--- a/examples/lfric/eg17/full_example_extract/Makefile
+++ b/examples/lfric/eg17/full_example_extract/Makefile
@@ -61,6 +61,8 @@ LFRIC_LIB=$(LFRIC_PATH)/lib$(LFRIC_NAME).a
 # This will add the required include flags to F90FLAGS
 include $(LFRIC_PATH)/lfric_include_flags.inc
 
+F90FLAGS += -I$(EXTRACT_DIR)
+
 transform: main_psy.f90 main_alg.f90
 
 compile: transform $(EXEC)
