#1839 fix missing coverage and forbid test-harness gen for LFRic API

--- a/examples/psyad/eg2/Makefile
+++ b/examples/psyad/eg2/Makefile
@@ -47,7 +47,7 @@ GENERATED_FILES +=
 # will not need to be specified on the command line once issue #1556
 # has been addressed.
 transform:
-	$(PSYAD) tl_hydrostatic_kernel_mod.F90 -a r_u exner theta moist_dyn_gas moist_dyn_tot moist_dyn_fac grad_term theta_v_e theta_v_at_quad grad_theta_v_at_quad exner_e exner_at_quad res_dot_product
+	$(PSYAD) -api dynamo0.3 tl_hydrostatic_kernel_mod.F90 -a r_u exner theta moist_dyn_gas moist_dyn_tot moist_dyn_fac grad_term theta_v_e theta_v_at_quad grad_theta_v_at_quad exner_e exner_at_quad res_dot_product
 	@echo "Harness generation not yet supported"
 
 # It is not yet possible to compile the adjoint code into an object
