#1735 Added dependency from .mod to .o to avoid that make sometimes tries to use modula (m2c) to create files.

--- a/tutorial/practicals/LFRic/building_code/4_psydata/Makefile.inc
+++ b/tutorial/practicals/LFRic/building_code/4_psydata/Makefile.inc
@@ -106,6 +106,8 @@ time_evolution_alg_mod.o: init_perturbation_kernel_mod.o \
 time_evolution_alg_mod_psy.o: init_perturbation_kernel_mod.o \
 	prop_perturbation_kernel_mod.o
 
+%.o: %.mod
+
 %.o: %.f90
 	$(F90) $(F90FLAGS) -c $<
 
