--- a/lib/extract/standalone/dl_esm_inf/Makefile
+++ b/lib/extract/standalone/dl_esm_inf/Makefile
@@ -55,7 +55,7 @@ INF_LIB_NAME = _fd
 INF_LIB = $(GOCEAN_INF_DIR)/src/lib$(INF_LIB_NAME).a
 
 F90FLAGS += -I$(INF_INC)
-PSYDATA_LIB_NAME = _kernel_data_standalone
+PSYDATA_LIB_NAME = _extract
 PSYDATA_LIB = lib$(PSYDATA_LIB_NAME).a
 
 PROCESS_ARGS = -prefix=extract_ -types=int,real,double \
