#1813 Use new extraction lib names, include the type standalone/netcdf for all binaries.

--- a/examples/gocean/eg5/extract/Makefile
+++ b/examples/gocean/eg5/extract/Makefile
@@ -49,9 +49,9 @@ include $(PSYROOT)/examples/common.mk
 # Set it to 'netcdf' to use the NetCDF writer
 TYPE?=standalone
 
-GENERATED_FILES += *.o *.mod $(NAME)  alg.f90 psy.f90 \
-		  $(DRIVER_INIT)   $(DRIVER_INIT).f90         \
-		  $(DRIVER_UPDATE) $(DRIVER_UPDATE).f90
+GENERATED_FILES += *.o *.mod $(NAME)  alg.f90 psy.f90   \
+		  $(DRIVER_INIT).$(TYPE)   $(DRIVER_INIT).f90   \
+		  $(DRIVER_UPDATE).$(TYPE) $(DRIVER_UPDATE).f90
 
 # Location of the infrastucture code (which is a submodule of the
 # PSyclone git repo).
@@ -62,14 +62,17 @@ INF_LIB = $(INF_DIR)/src/lib_fd.a
 ifeq ($(TYPE), netcdf)
 	EXTRACT_DIR ?= $(PSYROOT)/lib/extract/netcdf/dl_esm_inf
 	READ_DIR ?= $(PSYROOT)/lib/extract/netcdf
-	LIB_NAME = lib_kernel_data_netcdf.a
 	F90FLAGS += $$(nf-config --fflags)
 	LDFLAGS += $$(nf-config --flibs)
+	GENERATED_FILES += main-init.nc main-update.nc
 else
 	EXTRACT_DIR ?= $(PSYROOT)/lib/extract/standalone/dl_esm_inf
 	READ_DIR ?= $(PSYROOT)/lib/extract/standalone
-	LIB_NAME = lib_kernel_data_standalone.a
+	GENERATED_FILES += main-init.binary main-update.binary
+
 endif
+
+LIB_NAME = lib_extract.a
 READ_KERNEL_DATA = $(READ_DIR)/read_kernel_data_mod.o \
 
 
@@ -77,7 +80,7 @@ READ_KERNEL_DATA = $(READ_DIR)/read_kernel_data_mod.o \
 KERNELS = init_field_mod.o update_field_mod.o
 
 # The name of the executable
-NAME = extract_test
+NAME = extract_test.$(TYPE)
 
 # The name of the stand-alone driver that will call the init kernel.
 DRIVER_INIT = driver-main-init
@@ -92,7 +95,7 @@ run: compile
 	./driver-main-init
 	./driver-main-update
 
-compile: transform $(NAME) $(DRIVER_INIT) $(DRIVER_UPDATE)
+compile: transform $(NAME) $(DRIVER_INIT).$(TYPE) $(DRIVER_UPDATE).$(TYPE)
 
 transform: psy.f90
 
@@ -109,14 +112,14 @@ $(NAME): $(INF_LIB) $(EXTRACT_DIR)/$(LIB_NAME) $(KERNELS) alg.o psy.o
 
 #TODO #1757: $(INF_LIB) is required because of the meta-data in the
 #            kernel - once this is fixed, $(INF_LIB) can be removed.
-$(DRIVER_INIT):	$(KERNELS) $(DRIVER_INIT).o $(READ_KERNEL_DATA)
-	$(F90) $(KERNELS) $(DRIVER_INIT).o -o $(DRIVER_INIT)  \
+$(DRIVER_INIT).$(TYPE):	$(KERNELS) $(DRIVER_INIT).o $(READ_KERNEL_DATA)
+	$(F90) $(KERNELS) $(DRIVER_INIT).o -o $(DRIVER_INIT).$(TYPE) \
 		$(INF_LIB) $(READ_KERNEL_DATA) $(LDFLAGS)
 
 #TODO #1757: $(INF_LIB) is required because of the meta-data in the
 #            kernel - once this is fixed, $(INF_LIB) can be removed.
-$(DRIVER_UPDATE): $(KERNELS) $(DRIVER_UPDATE).o $(READ_KERNEL_DATA)
-	$(F90) $(KERNELS) $(DRIVER_UPDATE).o -o $(DRIVER_UPDATE) \
+$(DRIVER_UPDATE).$(TYPE): $(KERNELS) $(DRIVER_UPDATE).o $(READ_KERNEL_DATA)
+	$(F90) $(KERNELS) $(DRIVER_UPDATE).o -o $(DRIVER_UPDATE).$(TYPE) \
 		$(INF_LIB) $(READ_KERNEL_DATA) $(LDFLAGS)
 
 # The dl_esm_inf library
