--- a/examples/psyad/eg2/Makefile
+++ b/examples/psyad/eg2/Makefile
@@ -40,8 +40,6 @@ NAN_TEST_DIR = $(PSYROOT)/lib/nan_test/lfric
 LIB_NAME = lib_nan_test.a
 
 CONFIG_ENV = PSYCLONE_CONFIG=${PSYCLONE_DIR}/config/psyclone.cfg
-GENERATED_FILES += adj_*.[fF]90 test_harness.exe \
-                   *.x90 alg.f90 psy.f90 *.mod *.o
 
 LFRIC_DIR ?= $(PSYROOT)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
 LFRIC_NAME=lfric
@@ -60,12 +58,18 @@ ADJ_PROC_NAME = $(subst tl_,adj_,${TL_PROC_NAME})
 TL_KERNEL_TYPE = ${TL_KERNEL_NAME}_type
 ADJ_KERNEL_TYPE = $(subst tl_,adj_,${TL_KERNEL_TYPE})
 
+HARNESS_X90_FILE = adjoint_test_mod.x90
+HARNESS_F90_FILE = adjoint_test_mod.F90
+
+GENERATED_FILES += adj_*.[fF]90 test_harness.exe \
+                   *.x90 ${HARNESS_F90_FILE} psy.f90 *.mod *.o
+
 transform: psy.f90
 
 # Process the generated test-harness algorithm with PSyclone.
 # Note that we could add NaN checking at this point.
-psy.f90 alg.f90: main_alg.x90 ${ADJ_KERNEL_F90_FILE}
-	${PSYCLONE} -api dynamo0.3 -nodm -opsy psy.f90 -oalg alg.f90 main_alg.x90
+psy.f90 ${HARNESS_F90_FILE}: ${HARNESS_X90_FILE} ${ADJ_KERNEL_F90_FILE}
+	${PSYCLONE} -l all -api dynamo0.3 -nodm -opsy psy.f90 -oalg ${HARNESS_F90_FILE} ${HARNESS_X90_FILE}
 
 # Create the adjoint kernel and the corresponding test
 # harness in separate files. Note, one of the variables provided in the
@@ -74,13 +78,17 @@ psy.f90 alg.f90: main_alg.x90 ${ADJ_KERNEL_F90_FILE}
 # intrinsic with equivalent code. This and all other local variables
 # will not need to be specified on the command line once issue #1556
 # has been addressed.
-${ADJ_KERNEL_X90_FILE} main_alg.x90: ${TL_KERNEL_FILE}
-	$(PSYAD) -api dynamo0.3 $< -otest main_alg.x90 -oad ${ADJ_KERNEL_X90_FILE} -a ${ACTIVE_VAR_LIST}
+${ADJ_KERNEL_X90_FILE} ${HARNESS_X90_FILE}: ${TL_KERNEL_FILE}
+	$(PSYAD) -api dynamo0.3 $< -otest ${HARNESS_X90_FILE} -oad ${ADJ_KERNEL_X90_FILE} -a ${ACTIVE_VAR_LIST}
 
 ${ADJ_KERNEL_F90_FILE}: ${ADJ_KERNEL_X90_FILE}
 	# Currently PSyAD does not update the kernel metadata (issue #1453)
 	# so we do that manually here. We have to allow for the case where
 	# the kernel contains multiple implementations (for mixed precision).
+        #
+        # WARNING: the metadata may still be incorrect as we do not change
+        # the ACCESS properties of the arguments.
+        # TODO #1772.
 	sed -e 's/PROCEDURE, NOPASS :: ${TL_PROC_NAME}/PROCEDURE, NOPASS :: ${ADJ_PROC_NAME}/' -e 's/:: ${TL_KERNEL_TYPE}/:: ${ADJ_KERNEL_TYPE}/' \
 -e 's/interface ${TL_PROC_NAME}/interface ${ADJ_PROC_NAME}/' \
 -e 's/module procedure ${TL_PROC_NAME}.*\w/&_adj/' \
