pr #1807 Putting back lfric example Makefile. The lfric examples run locally but were failing in GHA.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -37,10 +37,10 @@
 
 .PHONY: transform run compile notebook clean allclean
 
-# ${MAKE} -C lfric $@
 transform compile run notebook clean allclean:
 	${MAKE} -C gocean $@
 	${MAKE} -C nemo $@
+	${MAKE} -C lfric $@
 	${MAKE} -C line_length $@
 	${MAKE} -C psyir $@
 	${MAKE} -C psyad $@
