--- a/examples/lfric/eg12/Makefile
+++ b/examples/lfric/eg12/Makefile
@@ -45,8 +45,9 @@ extract:
 # ${PSYCLONE} -nodm -s ./extract_nodes.py ../code/gw_mixed_schur_preconditioner_alg_mod.x90
 
 extract_transformed:
-	${PSYCLONE} -nodm -s ./extract_kernel_with_transformations.py \
-  ../code/gw_mixed_schur_preconditioner_alg_mod.x90
+	@echo "skipping"
+# ${PSYCLONE} -nodm -s ./extract_kernel_with_transformations.py \
+#  ../code/gw_mixed_schur_preconditioner_alg_mod.x90
 
 find_kernel:
 	PSYCLONE_CONFIG=${PSYCLONE_DIR}/config/psyclone.cfg ${PYTHON} find_kernel.py
