--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -133,7 +133,7 @@ jobs:
         flake8 --count --select=E9,F63,F7,F82 --show-source --statistics src examples tutorial
     - name: Run examples
       run: |
-        ( make -j 2 -C examples transform > /dev/null )
+        ( make -C examples transform )
         ( make -C examples notebook )
     - name: Run tutorials
       run: |
