pr #1807. Trying with a different script.

--- a/examples/lfric/eg12/Makefile
+++ b/examples/lfric/eg12/Makefile
@@ -41,11 +41,11 @@ include ../../common.mk
 transform: extract extract_transformed find_kernel
 
 extract:
-	 ${PSYCLONE} -nodm ../code/gw_mixed_schur_preconditioner_alg_mod.x90
+	${PSYCLONE} -nodm -s ../eg11/async_script.py ../code/gw_mixed_schur_preconditioner_alg_mod.x90
 #${PSYCLONE} -nodm -s ./extract_nodes.py ../code/gw_mixed_schur_preconditioner_alg_mod.x90
 
 extract_transformed:
-	${PSYCLONE} -s ./extract_kernel_with_transformations.py \
+	${PSYCLONE} -nodm -s ./extract_kernel_with_transformations.py \
 	  ../code/gw_mixed_schur_preconditioner_alg_mod.x90
 
 find_kernel:
